--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 
     <!-- Add a CSS here -->
 
+    <HEAD>
+        <style>
+            H1 {color:blue;font-size: 300%;}
+            P {color: blue;}
+        </style>
+    </HEAD>
+
     <body>
         <H1> This is my header</H1>
 
