--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <P> This is my parapragh</P>
 
         <H1> This is my 2nd header</H1>
+        <H1> This is my 3rd header</H1>
+        <H1> This is my 4th header</H1>
         
     </body>
 </html>
