Added STYLE for H2 header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <HEAD>
         <style>
             H1 {color:blue;font-size: 300%;}
+            H2 {color:red;font-size: 150%;} <!-- added at remote -->
             P {color: blue;}
         </style>
     </HEAD>
