Rt : Added H3 Tag in style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <style>
             H1 {color:blue;font-size: 300%;}
             H2 {color:red;font-size: 150%;} <!-- added at remote -->
+            H3 {color:red;font-size: 150%;}
             P {color: blue;}
         </style>
     </HEAD>
