Added H3 - yellow color

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+html>
 
     <!-- Add a CSS here -->
 
@@ -6,6 +6,7 @@
         <style>
             H1 {color:blue;font-size: 300%;}
             H2 {color:red;font-size: 150%;} <!-- added at remote -->
+            H3 {color:yellow;font-size: 150%;} <!-- added at local -->
             P {color: blue;}
         </style>
     </HEAD>
